--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "express": "^4.15.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue": "^2.4.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.0",
     "vux": "^2.5.12"
